--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -28,3 +28,17 @@
   --ifm-color-primary-lightest: #4fddbf;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
+
+.navbar__item.dropdown {
+  padding: 0px;
+}
+
+.navbar .version-dropdown-button {
+  display: none;
+  padding: var(--ifm-navbar-item-padding-vertical)
+      var(--ifm-navbar-item-padding-horizontal);
+}
+
+.navbar .version-dropdown-button.active {
+  display: block;
+}
